r53 (12. 03. 2022):
Added in-game popup for achievement "Lieutenant Colonel"
Changed achievement tracker "Gift Giver" to show only when you have a throwable which have damage higher than 0
Gage Tracker: Added option to show progress in popup
XP Tracker: Added option to show XP in popup and hint panels

r52 (10. 03. 2022):
Mountain Master Heist: Added more trackers
Mountain Master Heist: Removed duplicate achievement tracker
Mountain Master Heist: Fixed an issue where Heli Arrival Delay tracker is not accurate (Vanilla issue)

r51 (09. 03. 2022):
Added trackers for Mountain Master Heist
"Don't Show Trade Delay Tracker in Stealth": Fixed an issue where the option did not work corrently once the alarm went off
Art Gallery / Framing Frame Day 1: Added tracker for achievement "Painting Yourself Into a Corner"
Panic Room: Fixed a log spam
Prison Nightmare: Fixed wrong heli icon

r50 (13. 02. 2022):
Units using "SecurityLockGui" class will show one tracker with progress and hack time remaining
Election Day D1: Fixed an issue where PC hack tracker was removed when enemies pulled out the power
Stealing Xmas: Added tracker for achievement "The Grinch"
Reservoir Dogs Day 1: Fixed a broken achievement tracker for "Waste Not, Want Not"

r49 (10. 02. 2022):
Added tracker for achievements "The only one that is true", "The one that had many names", "The one that survived" and "The one who declared himself the hero"
Birth of Sky: Fixed a load crash (client only)

r48 (07. 02. 2022):
Fixed a crash when XP Tracker was disabled
Fixed an issue where in Aggregated Health Tracker when there was a gap between trackers
Cook Off: Fixed an issue where achievement tracker for "Kiss the Chef" showed on difficulties lower than OVERKILL
Rats Day 1/Cook Off: Fixed an issue where achievement tracker for "Full Measure" showed on difficulties lower than OVERKILL
Murky Station: Added tracker for achievement "Janitor"

r47 (05. 02. 2022):