@@ -37,6 +37,8 @@ local TT = EHI.Trackers
 local show_achievement = EHI:GetOption("show_achievement")
 local hard_and_above = EHI:IsDifficultyOrAbove("hard")
 local triggers = {
+    [102460] = { time = 7, id = "Countdown", icons = { "pd2_generic_look" }, class = TT.Warning },
+    [102606] = { id = "Countdown", special_function = SF.RemoveTracker },
     [102701] = { time = 13, id = "Patrol", icons = { "pd2_generic_look" }, class = TT.Warning },
     [102620] = { id = "EscapeElevator", special_function = SF.PauseTracker },
     [103456] = { time = 5, id = "nmh_11", class = TT.Achievement, special_function = SF.RemoveTriggerAndShowAchievementFromStart, condition = hard_and_above and show_achievement, exclude_from_sync = true },
